--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
 		<div class="vacationss">
 
 		<button ng-click=changeState('maintenanceState')>List</button>
-		<button ng-click=changeState('practiceState')>Start Practicing</button>
+		<button ng-click=changeState('detailsState')>Start Practicing</button>
 		<ui-view> </ui-view>
 
 	</div>
