--- a/public/index.html
+++ b/public/index.html
@@ -10,8 +10,8 @@
 	<script src="/js/controllers.js"></script>
 </head>
 <body ng-app='vacationApp' ng-controller='appController'>
-		<h1>Vacations</h1>
-		<div class="vacationss">
+		<span class='cTitle'>Vacations</span>
+		<div>
 
 		<button ng-click=changeState('maintenanceState')>List</button>
 		<button ng-click=changeState('detailsState')>Start Practicing</button>
