--- a/public/index.html
+++ b/public/index.html
@@ -11,10 +11,10 @@
 </head>
 <body ng-app='vacationApp' ng-controller='appController'>
 		<span class='cTitle'>Vacations</span>
-		<div>
+		<div class='cVacations'>
 
-		<button ng-click=changeState('maintenanceState')>List</button>
-		<button ng-click=changeState('detailsState')>Start Practicing</button>
+		<!-- button ng-click=changeState('maintenanceState')>List</button>
+		<button ng-click=changeState('detailsState')>Start Practicing</button -->
 		<ui-view> </ui-view>
 
 	</div>
